# module_manager_rs

./: Cargo.toml  readme.md
src/: config_node.rs  database.rs  file.rs  key_patch.rs  lib.rs  main.rs  module_manager.rs  node_patch.rs  operation.rs  operator.rs  pass.rs  patch_set.rs  patcher.rs  raw_patch.rs  searcher.rs
src/module_manager/: operator.rs  patcher.rs  searcher.rs
src/module_manager/operator/: has.rs  needs.rs
src/operator/: has.rs
src/patcher/: node.rs
tests/: snippets.rs
tests/GameData/RN_Cygnus/: cygnus.cfg
tests/GameData/RealismOverhaul/RO_SuggestedMods/RaiderNick/: RO_RN_Cygnus.cfg
tests/snippets/: edit_node.cfg  needs.cfg  raw_data.cfg
tests/synthetic/GameData/: foo.cfg  foo_patch.cfg
