[package]
name = "module_manager_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = "3.13.0"
clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"
ksp-cfg-formatter = { git = "https://github.com/StonesmileGit/ksp-cfg-formatter.git" }
log = "0.4.19"
pretty_env_logger = "0.5.0"
thiserror = "1.0.44"
walkdir = "2.3.3"
